# datascience

./: Untitled-1  test.ipynb  test_module.py  workspace.code-workspace
Pyspark/: bucketing.md  cache.md  deprecated.md  doc.md  job_parameters_tuning  join_strategies.md  partition_strategies.md  shuffle.md  spark_crash_tips.md
classes_demo/abc_class_demo/: main.py
classes_demo/classes_demo/: main.py
classes_demo/data_class_demo/: main.py
dash_demo/: dash_test.ipynb  main.py  test_main.py
decorator_demo/: main.py
demo/: config_strategies.ipynb  parquet_strategies.ipynb  repartion_strategies.ipynb  window_strategies.ipynb
exception_demo/: main.py  pyproject.toml
fast_api_demo/: pyproject.toml
fast_api_demo/src/: main.py  train.ipynb
hypothesis_demo/: calculate_devision.py  test_do_generated.py
hypothesis_demo/test/: test_calculate_devision.py
logging_demo/: loggins.py
logging_demo/doc/: type
poetry_demo/: pyproject.toml
poetry_demo/src/: __init__.py
poetry_demo/tests/: test_poetry_demo.py
pydantic_demo/: main.py  pyproject.toml
pyspark-zero-to-hero/: 20_skewness_and_spillage.ipynb  emp.csv
