[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["driss <dr4@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.108.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
