[tool.poetry]
name = "pydantic-demo"
version = "0.1.0"
description = ""
authors = ["driss <dr4@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {extras = ["email"], version = "^2.5.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
